--- a/primeiros_prototipos.tex
+++ b/primeiros_prototipos.tex
@@ -1,4 +1,4 @@
-\subsection{Primeiros protótipos}
+ \subsection{Primeiros protótipos}
 
 Um dos processos de desenvolvimento de uma Aplicação Web é a criação de protótipos (\emph{Mockups}) que demostre de que forma o utilizador interage com a aplicação.A facilidade de navegação e as interações necessárias para a transição entre duas páginas são cruciais para que a aplicação tenha êxito e seja usada mais vezes pelos utilizadores. \\
 Durante a produção dos primeiros protótipos, teve-se como objetivo identificar de que formas as várias funcionalidades do sistemas iriam estar presentes na aplicação, sem haver preocupações com questões estéticas.Este protótipos foram desenvolvidos usanto a aplicação \href{http://balsamiq.com/products/mockups/}{\emph{Balsamiq Mockups}}(Figura ~\ref{fig: balsamiq}).\\
@@ -10,9 +10,8 @@ Durante a produção dos primeiros protótipos, teve-se como objetivo identifica
          \label{fig: balsamiq}
 \end{figure}
 
-%Introdução a falar dos mockups feitos
-Sobre os prótipos feitos, teve-se como preocupação a simplicidade da pagina, a quantidade de informação e o tempo de navegação, isto é a quantidade de ações que um utilizador tem que fazer para passar de uma página para outra.\\
-Começando pela página inicial (Figura ~\ref{fig: home}) está mostra as várias funcionalidades da aplicação, fazendo a distinção entre alunos e docentes.A partir da pagina inicial o utilizador pode fazer efectuar registo, login ou procura projetos públicos. \\
+Sobre os prótipos desenvolvidos, teve-se como preocupação a simplicidade da página, a quantidade de informação e o tempo de navegação, isto é a quantidade de ações que um utilizador tem que fazer para passar de uma página para outra.\\
+Começando pela página inicial (Figura ~\ref{fig: home}) está mostra as várias funcionalidades da aplicação, fazendo a distinção entre alunos e docentes.A partir da página inicial o utilizador pode fazer efectuar registo, login ou procura projetos públicos. \\
 
 \begin{figure}[htbp]
         \centering
@@ -21,7 +20,7 @@ Começando pela página inicial (Figura ~\ref{fig: home}) está mostra as vária
          \label{fig: home}
 \end{figure}
 
-No painel de uma disciplina(Figura ~\ref{fig: cursodocente}), um docente pode ter acesso aos últimos acontecimentos dentro das disciplina, sabendo quando aconteceram submissões nos projetos desta, assim alterações da mesma.Também existem informações sobre os projetos criados na disciplina, no qual são apresentadas informações sobre o nome do prjeto, número de fases,estado e número de entregas até ao momento. No caso de ser o docente responsável da disciplina podes adicionar professores de forma direta sem que haja a necessidade de abrir formulários adicionais e fazer gestão de turnos. Caso contrário apenas poderá ver o estado dos turnos e quais são os docentes da disciplina.\\
+No painel de uma disciplina(Figura ~\ref{fig: cursodocente}), um docente pode ter acesso aos últimos acontecimentos dentro das disciplina, sabendo quando aconteceram submissões nos projetos desta, assim como alterações da mesma.Também existem informações sobre os projetos criados na disciplina, no qual são apresentadas informações sobre o nome do projeto, número de fases,estado e número de entregas até ao momento. Também é possivel adicionar professores de forma direta sem que haja a necessidade de abrir formulários adicionais e fazer gestão de turnos. Caso contrário apenas poderá ver o estado dos turnos e quais são os docentes da disciplina.\\
 
 \begin{figure}[htbp]
         \centering
@@ -30,7 +29,7 @@ No painel de uma disciplina(Figura ~\ref{fig: cursodocente}), um docente pode te
          \label{fig: cursodocente}
 \end{figure}
 
-Na paindel de pesquisa de projetos(Figura ~\ref{fig: projetospublicos}), todos os utilizadores tem acesso aos projetos públicos. Nesta página o utilizador pode filtrar uma pesquisa de forma a que o processo de pesquisa seja mais rapido. Os resultados de uma pesquisa são apresentados sob forma de blocos, desta forma, garante-se um maior aproveitamento do espaço livre da pagina.\\
+Na painel de pesquisa de projetos(Figura ~\ref{fig: projetospublicos}), todos os utilizadores tem acesso aos projetos públicos. Nesta página o utilizador pode filtrar uma pesquisa de forma a que o processo seja mais rápido. Os resultados de uma pesquisa são apresentados sob forma de blocos, desta forma, garante-se um maior aproveitamento do espaço livre da página.\\
 
 \begin{figure}[htbp]
         \centering
@@ -42,10 +41,12 @@ Na paindel de pesquisa de projetos(Figura ~\ref{fig: projetospublicos}), todos o
 Quando dentro do painel de um projeto, um docente pode:
 
 \begin{itemize}
+        \item Alterar informações do projeto
 	\item Adicionar um enunciado, tal como outros ficheiros
 	\item Gerir os grupos criados dentro do projeto
 	\item Gerir as fases do projeto
 	\item Consultar as submissões feitas até ao momento
+        \item Adicionar/Remover testes
 \end{itemize}
 tal como se pode ver na Figura ~\ref{fig: painelprojetodocente}.\\
 
@@ -56,7 +57,7 @@ tal como se pode ver na Figura ~\ref{fig: painelprojetodocente}.\\
          \label{fig: painelprojetodocente}
 \end{figure}
 
-Um aluno apenas pode consultar as informações dadas pelos os docente, fazer a gestão do seu grupo e aceder a página de submissão de um projeto, como é possivel ver na Figura ~\ref{fig: painelprojetoaluno}.\\
+Um aluno pode consultar as informações dadas pelos os docente, consultar as entregas efetuadas pelo grupo, fazer a gestão do seu grupo e aceder a página de submissão de um projeto, como é possivel ver na Figura ~\ref{fig: painelprojetoaluno}.\\
 
 \begin{figure}[htbp]
         \centering
@@ -65,7 +66,7 @@ Um aluno apenas pode consultar as informações dadas pelos os docente, fazer a 
          \label{fig: painelprojetoaluno}
 \end{figure}
 
-Quando se visualiza um projeto, e de acordo com a Figura ~\ref{fig: projetoaluno}, pode-se aceder diretamente ao enunciado e relatório do projeto, ver e fazer \emph{Dowload} individual ou global(Ficheiro \emph{ZIP}) dos ficheiros submetidos, também é disponibilizado um resumo sob o trabalho feito, assim como a nota deste caso exsita.Se for um docente responsavel pela disciplina em que se enquadra o projeto a aceder a página, este pode fazer a avaliação do grupo, ou de cada membro individual e adicionar comentários sob a nota dada, tal como podemos ver na Figura ~\ref{fig: projetodocente}.\\
+Quando se visualiza um projeto, e de acordo com a Figura ~\ref{fig: projetoaluno}, pode-se aceder diretamente ao enunciado e relatório do projeto, ver e fazer \emph{Dowload} individual ou global(Ficheiro \emph{ZIP}) dos ficheiros submetidos, também é disponibilizado um resumo sob o trabalho feito, assim como a nota deste caso exista.Se for um docente responsável pela disciplina em que se enquadra o projeto a aceder à página, este pode fazer a avaliação do grupo, ou de cada membro individual e adicionar comentários sob a nota dada, tal como podemos ver na Figura ~\ref{fig: projetodocente}.\\
 
 \begin{figure}[htbp]
         \centering
