Corrige Anexos e Posição das Imagens

--- a/plano_de_trabalho.tex
+++ b/plano_de_trabalho.tex
@@ -12,7 +12,7 @@ Para esta fase de planeamento, análise e modelação foi criado um plano de um 
 teriam de estar concluídas. Na Figura \ref{fig: workplan1} é possível ver um diagrama de Gannt com
 o planeamento inicial.
 
-\begin{figure}[htbp] 
+\begin{figure}[H] 
   \centering
   \includegraphics[width=1\textwidth]{images/plano_de_trabalho/gannt_1.png}
   \caption{Diagrama de Gannt para o planeamento e análise de requisitos}
@@ -48,21 +48,21 @@ documentação relativa ao grupo de funcionalidades que estão a ser implementad
 É possível ver nas Figuras \ref{fig: workplan2}, \ref{fig: workplan3}, \ref{fig: workplan4} 
 os diagramas de Gannt com o planeamento respetivo à fase de desenvolvimento.
 
-\begin{figure}[htbp!] 
+\begin{figure}[H] 
   \centering
   \includegraphics[width=1\textwidth]{images/plano_de_trabalho/gannt_2.png}
   \caption{Diagrama de Gannt para o desenvolvimento I}
   \label{fig: workplan2}
 \end{figure}
 
-\begin{figure}[htbp!] 
+\begin{figure}[H] 
   \centering
   \includegraphics[width=1\textwidth]{images/plano_de_trabalho/gannt_3.png}
   \caption{Diagrama de Gannt para o desenvolvimento II}
   \label{fig: workplan3}
 \end{figure}
 
-\begin{figure}[htbp!] 
+\begin{figure}[H] 
   \centering
   \includegraphics[width=1\textwidth]{images/plano_de_trabalho/gannt_4.png}
   \caption{Diagrama de Gannt para o desenvolvimento III}
