Corrige numeração das páginas

--- a/funcionalidades_do_sistema.tex
+++ b/funcionalidades_do_sistema.tex
@@ -28,7 +28,7 @@ definidas aquando do registo prévio. Como utilizadores não registados podem ta
 todos os projetos disponibilizados por outros utilizadores na aplicação, assim como também lhes é fornecida
 a opção de descarregarem os mesmos projetos para o dispositivo de onde acessam.
 
-\subsection{Utilizadores registados: Docente}
+\subsection{Docentes}
 
 O seguinte tipo de utilizadores descrevem-se como utilizadores registados, sendo-lhes 
 disponibilizadas funcionalidades específicas dentro do ambiente da aplicação. Nesse sentido, para 
@@ -61,7 +61,7 @@ sua criação e remoção, consulta, tipo de visibilidade, definição de
 obrigatoriedade de ficheiros, definição de testes sobre entregas e estabelecimento de prazos limite 
 para submissões.
 
-\subsection{Utilizadores registados: Alunos}
+\subsection{Alunos}
 
 Tal como o tipo de utilizador Docente, o tipo de utilizador Aluno é uma extensão 
 de um utilizador não registado após o registo. Este tipo de utilizador é 
