--- a/prototipos.tex
+++ b/prototipos.tex
@@ -1,3 +1,14 @@
 \section{Protótipos para a interface da aplicação}
+
+Um dos processos de desenvolvimento de uma Aplicação Web é a criação de protótipos. Este processo tem como objetivo demonstrar de que forma o utilizador interage com a aplicação e ajuda a tomar decisões antes da implementação da aplicação. Desta forma há um maior entendimento entre o utilizador e a equipa de desenvolvimento e aumenta a usabilidade da aplicação por parte do utilizador, uma vez que são garantidas as seguintes habilidades:
+
+\begin{description}
+	\item[Fácil apendizagem] A utilização da aplicação requer pouco treino
+	\item[Fácil de memorizar] O utilizador lembra-se de como utilizar a interface depois algum tempo
+	\item[Maximizar a produtividade] A realização de uma tarefa é feita de forma rápida e eficiente
+	\item[Minimizar a taxa de erros] A aplicação avisa o utlizador, caso existam erros e ajuda na correção dos mesmos
+	\item[Maximizar a satisfação] A aplicação transmite confiança e segurança ao utilizador
+\end{description}
+
 \input{primeiros_prototipos}
 \input{prototipos_fidedignos}
