--- a/primeiros_prototipos.tex
+++ b/primeiros_prototipos.tex
@@ -1,7 +1,8 @@
  \subsection{Primeiros protótipos}
 
-Um dos processos de desenvolvimento de uma Aplicação Web é a criação de protótipos (\emph{Mockups}) que demostre de que forma o utilizador interage com a aplicação.A facilidade de navegação e as interações necessárias para a transição entre duas páginas são cruciais para que a aplicação tenha êxito e seja usada mais vezes pelos utilizadores. \\
-Durante a produção dos primeiros protótipos, teve-se como objetivo identificar de que formas as várias funcionalidades do sistemas iriam estar presentes na aplicação, sem haver preocupações com questões estéticas.Este protótipos foram desenvolvidos usanto a aplicação \href{http://balsamiq.com/products/mockups/}{\emph{Balsamiq Mockups}}(Figura ~\ref{fig: balsamiq}).\\
+
+Durante a produção dos primeiros protótipos, teve-se como objetivo identificar de que formas as várias funcionalidades do sistemas iriam estar presentes na aplicação, sem haver preocupações com questões estéticas.Este protótipos são fundamentais, uma vez que demonstrem alguns dos cenários mais complexos e ajuda a compreensão de fluxos ou processos.
+Este protótipos foram desenvolvidos usando a aplicação \href{http://balsamiq.com/products/mockups/}{\emph{Balsamiq Mockups}}(Figura ~\ref{fig: balsamiq}).\\
 
  \begin{figure}[htbp]
         \centering
@@ -10,8 +11,8 @@ Durante a produção dos primeiros protótipos, teve-se como objetivo identifica
          \label{fig: balsamiq}
 \end{figure}
 
-Sobre os prótipos desenvolvidos, teve-se como preocupação a simplicidade da página, a quantidade de informação e o tempo de navegação, isto é a quantidade de ações que um utilizador tem que fazer para passar de uma página para outra.\\
-Começando pela página inicial (Figura ~\ref{fig: home}) está mostra as várias funcionalidades da aplicação, fazendo a distinção entre alunos e docentes.A partir da página inicial o utilizador pode fazer efectuar registo, login ou procura projetos públicos. \\
+Sobre os protótipos desenvolvidos, teve-se como preocupação a simplicidade da página, a quantidade de informação e o tempo de navegação, isto é a quantidade de ações que um utilizador tem que fazer para passar de uma página para outra.\\
+Começando pela página inicial (Figura ~\ref{fig: home}) está mostra as várias funcionalidades da aplicação, fazendo a distinção entre alunos e docentes.A partir da página inicial o utilizador pode fazer efetuar registo, login ou procura projetos públicos. \\
 
 \begin{figure}[htbp]
         \centering
@@ -20,7 +21,7 @@ Começando pela página inicial (Figura ~\ref{fig: home}) está mostra as vária
          \label{fig: home}
 \end{figure}
 
-No painel de uma disciplina(Figura ~\ref{fig: cursodocente}), um docente pode ter acesso aos últimos acontecimentos dentro das disciplina, sabendo quando aconteceram submissões nos projetos desta, assim como alterações da mesma.Também existem informações sobre os projetos criados na disciplina, no qual são apresentadas informações sobre o nome do projeto, número de fases,estado e número de entregas até ao momento. Também é possivel adicionar professores de forma direta sem que haja a necessidade de abrir formulários adicionais e fazer gestão de turnos. Caso contrário apenas poderá ver o estado dos turnos e quais são os docentes da disciplina.\\
+No painel de uma disciplina(Figura ~\ref{fig: cursodocente}), um docente pode ter acesso aos últimos acontecimentos dentro das disciplina, sabendo quando aconteceram submissões nos projetos desta, assim como alterações da mesma.Também existem informações sobre os projetos criados na disciplina, no qual são apresentadas informações sobre o nome do projeto, número de fases, estado e número de entregas até ao momento. Também é possível adicionar professores de forma direta sem que haja a necessidade de abrir formulários adicionais e fazer gestão de turnos. Caso contrário apenas poderá ver o estado dos turnos e quais são os docentes da disciplina.\\
 
 \begin{figure}[htbp]
         \centering
@@ -57,7 +58,7 @@ tal como se pode ver na Figura ~\ref{fig: painelprojetodocente}.\\
          \label{fig: painelprojetodocente}
 \end{figure}
 
-Um aluno pode consultar as informações dadas pelos os docente, consultar as entregas efetuadas pelo grupo, fazer a gestão do seu grupo e aceder a página de submissão de um projeto, como é possivel ver na Figura ~\ref{fig: painelprojetoaluno}.\\
+Um aluno pode consultar as informações dadas pelos os docente, consultar as entregas efetuadas pelo grupo, fazer a gestão do seu grupo e aceder a página de submissão de um projeto, como é possível ver na Figura ~\ref{fig: painelprojetoaluno}.\\
 
 \begin{figure}[htbp]
         \centering
