caso estudo - inicio

--- a/casos_de_estudo.tex
+++ b/casos_de_estudo.tex
@@ -1,1 +1,6 @@
 \section{Casos de estudo}
+
+
+No primeiro caso pretende-se que haja uma plataforma para a submissão do Projeto Integrado de Engenharia de Linguagens do Mestrado em Engenharia Informática.\\
+Engenharia de Linguagens tem cerca de 25 alunos, 1 único turno e 4 docentes.
+Quanto ao Projeto Integrado, este tem que ser feito por grupos com o máximo de 3 elementos, existem 4 fazes de entrega(as 3 primeiras tem uma nota qualitativa e a última fase vale 20 valores). Relativamente à entrega, em cada fase é obrigatório entregar um
