--- a/primeiros_prototipos.tex
+++ b/primeiros_prototipos.tex
@@ -3,7 +3,7 @@
 Durante a produção dos primeiros protótipos, teve-se como objetivo identificar de que formas as várias funcionalidades do sistemas iriam estar presentes na aplicação, sem haver preocupações com questões estéticas.Este protótipos são fundamentais, uma vez que demonstrem alguns dos cenários mais complexos e ajuda a compreensão de fluxos ou processos.
 Este protótipos foram desenvolvidos usando a aplicação \href{http://balsamiq.com/products/mockups/}{\emph{Balsamiq Mockups}}(Figura ~\ref{fig: balsamiq}).\\
 
- \begin{figure}[htbp]
+ \begin{figure}[H]
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/balsamiq.png}
          \caption{\emph{Balsamiq Mockups}}
@@ -13,7 +13,7 @@ Este protótipos foram desenvolvidos usando a aplicação \href{http://balsamiq.
 Sobre os protótipos desenvolvidos, teve-se como preocupação a simplicidade da página, a quantidade de informação e o tempo de navegação, isto é a quantidade de ações que um utilizador tem que fazer para passar de uma página para outra.\\
 Começando pela página inicial (Figura ~\ref{fig: home}) está mostra as várias funcionalidades da aplicação, fazendo a distinção entre alunos e docentes.A partir da página inicial o utilizador pode fazer efetuar registo, login ou procura projetos públicos. \\
 
-\begin{figure}[htbp]
+\begin{figure}[H]
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/home.png}
          \caption{Página inicial}
@@ -22,7 +22,7 @@ Começando pela página inicial (Figura ~\ref{fig: home}) está mostra as vária
 
 No painel de uma disciplina(Figura ~\ref{fig: cursodocente}), um docente pode ter acesso aos últimos acontecimentos dentro das disciplina, sabendo quando aconteceram submissões nos projetos desta, assim como alterações da mesma.Também existem informações sobre os projetos criados na disciplina, no qual são apresentadas informações sobre o nome do projeto, número de fases, estado e número de entregas até ao momento. Também é possível adicionar professores de forma direta sem que haja a necessidade de abrir formulários adicionais e fazer gestão de turnos. Caso contrário apenas poderá ver o estado dos turnos e quais são os docentes da disciplina.\\
 
-\begin{figure}[htbp]
+\begin{figure}[H]
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/cursodocente.png}
          \caption{Painel de projeto de um aluno}
@@ -31,7 +31,7 @@ No painel de uma disciplina(Figura ~\ref{fig: cursodocente}), um docente pode te
 
 Na painel de pesquisa de projetos(Figura ~\ref{fig: projetospublicos}), todos os utilizadores tem acesso aos projetos públicos. Nesta página o utilizador pode filtrar uma pesquisa de forma a que o processo seja mais rápido. Os resultados de uma pesquisa são apresentados sob forma de blocos, desta forma, garante-se um maior aproveitamento do espaço livre da página.\\
 
-\begin{figure}[htbp]
+\begin{figure}[H]
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/Projetos.png}
          \caption{Listagem dos projetos públicos}
@@ -50,7 +50,7 @@ Quando dentro do painel de um projeto, um docente pode:
 \end{itemize}
 tal como se pode ver na Figura ~\ref{fig: painelprojetodocente}.\\
 
-\begin{figure}[htbp]
+\begin{figure}[H]
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/painelprojetodocente.png}
          \caption{Painel de projeto de um docente}
@@ -59,7 +59,7 @@ tal como se pode ver na Figura ~\ref{fig: painelprojetodocente}.\\
 
 Um aluno pode consultar as informações dadas pelos os docente, consultar as entregas efetuadas pelo grupo, fazer a gestão do seu grupo e aceder a página de submissão de um projeto, como é possível ver na Figura ~\ref{fig: painelprojetoaluno}.\\
 
-\begin{figure}[htbp]
+\begin{figure}[H]
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/painelprojetoaluno.png}
          \caption{Painel de projeto de um aluno}
@@ -68,14 +68,14 @@ Um aluno pode consultar as informações dadas pelos os docente, consultar as en
 
 Quando se visualiza um projeto, e de acordo com a Figura ~\ref{fig: projetoaluno}, pode-se aceder diretamente ao enunciado e relatório do projeto, ver e fazer \emph{Dowload} individual ou global(Ficheiro \emph{ZIP}) dos ficheiros submetidos, também é disponibilizado um resumo sob o trabalho feito, assim como a nota deste caso exista.Se for um docente responsável pela disciplina em que se enquadra o projeto a aceder à página, este pode fazer a avaliação do grupo, ou de cada membro individual e adicionar comentários sob a nota dada, tal como podemos ver na Figura ~\ref{fig: projetodocente}.\\
 
-\begin{figure}[htbp]
+\begin{figure}[H]
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/projetovisitante.png}
          \caption{Entrega vista por um visitante}
          \label{fig: projetoaluno}
 \end{figure}
 
-\begin{figure}[htbp]
+\begin{figure}[H]
         \centering
         \includegraphics[width=1\textwidth]{images/prototipos/mockups/projetodocente.png}
          \caption{Entrega vista por um docente}
