Adiciona texto sobre testes

--- a/introducao.tex
+++ b/introducao.tex
@@ -8,6 +8,11 @@ permitindo gerar a pauta da turma. No entanto de forma a garantir um maior
 espetro de usabilidade, olhar para o sistema de forma a poder suportar 
 trabalhos práticos num formato mais genérico que permita não só receber 
 trabalhos de programação mas todo o tipo de trabalhos práticos produzidos.
+Não obstante, no que diz respeito aos trabalhos de programação, serão tidas em 
+atenção algumas funcionalidades que melhorem o tratamento deste tipo específico 
+de trabalhos fornecendo ferramentas para testes automáticos ao código submetido 
+pelos alunos, que avaliam o funcionamento desejado ou não consoante as 
+especificações do docente.
 
 Para este sistema ser completo e funcional deve também garantir funcionalidades como
 a gestão de unidades curriculares e a sua equipa docente,  gestão de turnos e dos alunos inscritos, e a
