--- a/casos_de_estudo.tex
+++ b/casos_de_estudo.tex
@@ -1,6 +1,19 @@
 \section{Casos de estudo}
 
 
-No primeiro caso pretende-se que haja uma plataforma para a submissão do Projeto Integrado de Engenharia de Linguagens do Mestrado em Engenharia Informática.\\
-Engenharia de Linguagens tem cerca de 25 alunos, 1 único turno e 4 docentes.
-Quanto ao Projeto Integrado, este tem que ser feito por grupos com o máximo de 3 elementos, existem 4 fazes de entrega(as 3 primeiras tem uma nota qualitativa e a última fase vale 20 valores). Relativamente à entrega, em cada fase é obrigatório entregar um
+No primeiro caso pretende-se que haja uma plataforma para a submissão do Projeto Integrado de Engenharia de Linguagens do Mestrado em Engenharia Informática da Universidade do Minho.\\
+Engenharia de Linguagens 1 único turno e 4 docentes.
+Quanto ao Projeto Integrado, este tem que ser feito por grupos com o máximo de 3 elementos, existem 4 fazes de entrega(as 3 primeiras tem uma nota qualitativa e a última fase vale 20 valores). Relativamente à entrega, em cada fase é obrigatório entregar um relatório e um conjunto de slides, na última fase além do relatório, é para enviar o código desenvolvido assim como outros ficheiros que o grupo ache relevante.
+O processo começa com o registo do docente responsavel, caso este já possuia uma conta tem efetuar login na aplicação. Após o login é necessário criar a cadeira de Engenharia de Linguagens, durante este processo será necessário preencher campos relativos ao nóme da instituição e do curso, caso um destes ja exista a disciplina será assonciada aos campos existentes. No fim de criar a disciplina, o docente será encaminhado para o painel da disciplina criada. Dentro do painel da disciplina, o docente responsavel pode adicionar docentes à disciplina.\\
+Procede-se para a criação do projeto. Ao criar um novo projeto o docente adiciona o enunciado, adiciona as várias fases do projeto, indica que os grupos só podem ter 3 elementos. Em cada fase indica que tem que ser enviado um relatório e os slides da apresentação em formato \emph{PDF}. Por fim tem a opção de lançar o projeto ou se apenas o quer deixar visivel para o resto da equipa docente, para o caso de haverem alterações.Após o projeto estar criado o docente é encaminhado para o painel do projeto.
+Um aluno uma vez registado e autenticado inscreve-se na cadeira e acede ao painel do projeto. No painel do projeto cria o seu grupo e faz uma submissão. É então reencaminhado para um formulario onde escreve um resumo do trabalho feito e envia os ficheiros necessários, concluindo assim a submissão.\\
+Voltando ao docente, este acede novamente ao painel do projeto e abre a página de entrega de um projeto submetido. Após analizar o relatório ou qualquer outro ficheiro enviado, carrega em avaliar e atribui a nota ao grupo ou a cada elemento individualmente, podendo também adicionar comentários sobre a nota atribuida.\\
+
+
+
+
+
+
+
+
+
