--- a/analise_do_problema.tex
+++ b/analise_do_problema.tex
@@ -1,1 +1,35 @@
 \section{Análise do problema}
+No meio académico, principalmente em áreas mais focadas numa vertente prática, muitas vezes
+os alunos são postos à prova através de trabalhos práticos. Neste caso, após a avaliação, os trabalhos
+práticos são arquivados pelos docentes e esquecidos permanentemente numa prateleira, até um dia
+serem deitados fora. 
+
+No sentido de promover a investigação e a partilha de conhecimento, torna-se não só necessário 
+criar uma plataforma de gestão de disciplinas universitárias e os seus trabalhos práticos, como também
+tornar possível a partilha de todo o conhecimento que é inevitavelmente inerente aos resultados
+do desenvolvimento destes.
+
+No momento as ferramentas que existem no mercado, se por um lado permitem toda a gestão de
+unidades curriculares de uma universidade, pecam por se focarem por um funcionamento fechado
+para dentro da instituição e consequentemente fechado para dentro dos cursos e das unidades curriculares.
+Nesse sentido o sistema retratado neste relatório, preenche a lacuna existente entre o que é desenvolvido
+num âmbito académico e o resto da população.
+
+Como resultado deste tipo de ponte entre os dois mundos, espera-se conseguir manter uma plataforma
+que não só incentive a investigação tanto dentro do mundo académico, como profissional e individual,
+como também incentive a partilha de conhecimento e fomente o desenvolvimento das 
+áreas de atuação condizentes com cada trabalho prático disponível na 
+plataforma.
+
+Para além disso, torna-se imperativo criar um modelo genérico de publicação de 
+trabalhos práticos para dessa forma se tornar muito mais acessível o consumo de 
+informação para os utilizadores da plataforma.
+
+No entanto também se torna necessário o foco no lado mais académico e das 
+necessidades dos docentes e alunos. Neste sistema todo o processo de 
+interatividade entre os utilizadores e a aplicação, permite tanto aos docentes 
+como aos alunos realizarem a gestão das suas unidades curriculares e trabalhos 
+práticos criando assim um sistema que cumpre as necessidades académicas internas dos docentes 
+e alunos bem como estabelece um ponto de ligação entre a comunidade académica e 
+o trabalho desenvolvido nesse meio, e o resto das pessoas com interesse nas 
+áreas abrangidas pelos projetos disponíveis.
