--- a/conclusao.tex
+++ b/conclusao.tex
@@ -1,1 +1,27 @@
 \section{Conclusão}
+Chegando ao final da primeira fase deste projeto é possível destacar algumas conclusões e decisões
+tomadas desde o início até ao ponto atual.
+
+Relativamente ao levantamento de funcionalidades e análise de requisitos conseguiu-se retratar
+corretamente o sistema em análise, cobrindo todo o espetro de funcionalidades necessárias para
+o bom funcionamento da solução que se irá desenvolver para este problema de gestão de trabalhos 
+práticos académicos em concreto.
+Foram detetadas as principais necessidades dos diversos tipos de utilizadores 
+para o qual este sistema é idealizado e também foi possível proceder a um 
+planeamento bem definido no que diz respeito ao futuro do desenvolvimento deste 
+projeto.
+
+No que diz respeito às decisões tecnológicas foi decidido proceder à 
+implementação da aplicação web usando a linguagem Ruby on Rails, não só pela 
+experiência que os elementos do grupo já possuem com a respetiva 
+\textit{framework}, mas também pelas suas características de prototipagem rápida 
+e pelas filosofias de desenvolvimento que a regem.
+Para além disso, a utilização desta framework irá ser bastante positiva no ponto 
+em que se seguirá uma abordagem Agile no desenvolvimento de todo este sistema.
+
+Por fim, a fase de desenvolvimento já foi iniciada e já foram criados vários prótotipos 
+relativos às interfaces disponibilizadas para a interação entre os utilizadores 
+e o sistema. Atualmente os resultados parecem ser positivos, pois a análise ao 
+resultado destes protótipos relevam que estes se destacam pela simplicidade de 
+intuitividade bastante elevada, o que é o objetivo idealizado para este 
+sistema.
