--- a/estado_do_desenvolvimento.tex
+++ b/estado_do_desenvolvimento.tex
@@ -15,6 +15,6 @@ O componente de Modelo do Rails é um conjunto de classes que usam o ActiveRecor
 
 Os Modelos do nosso sistema são os enunciados na subsecção \textbf{Diagrama de Classes}, da secção \textbf{Modelo de Dados}.
 
-Dentro dos modelos já estão definidas todas as relações entre as diferentes entidades do sistema, assim como algumas restrições dos dados.
+Dentro dos modelos já estão definidas todas as relações entre as diferentes entidades do sistema, assim como algumas restrições e validações dos dados.
 
 Para além da definição das Migrações e dos Modelos avançamos na construção em HTML das páginas principais.
