--- a/resumo.tex
+++ b/resumo.tex
@@ -1,1 +1,20 @@
 \section{Resumo}
+  Este relatório cobre todo o processo de planeamento, desenvolvimento e
+  documentação de um sistema que resolva um problema abordado na UCE de
+  Engenharia de Linguagens na forma de Projecto Integrador, nomeadamente
+  a gestão de trabalhos práticos académicos desde a sua criação pelos docentes, à resolução pelos alunos
+  e à publicação dos mesmos ao resto da comunidade \textit{online}.
+
+  A abordagem na resolução deste projecto passa por aliar todos os conhecimentos
+  adquiridos nos módulos integrantes de Engenharia de Linguagens, passando por
+ Engenharia Gramatical, Scripting no Processamento de Linguagem Natural, Processamento
+ Estruturado de Documentos e Análise e Transformação de Software.
+
+ Neste sentido pretende-se aliar ao desenvolvimento deste sistema conhecimentos
+ como gramáticas de atributos, ambientes de desenvolvimento estruturais e
+ orientados à semântica, representação de manipulação de conhecimento com
+ eficiência, automatização de tarefas e transformações, utilização de expressões
+ regulares, linguagens DSL, corpora, automatização de testes para diferentes
+ linguagens de programação, manipulação de documentos estruturados, utilização
+ de XML, XSL e XSLFO, documentos anotados, publicação de conhecimento na web,
+ entre outros.
