Corrige projecto integrador

--- a/resumo.tex
+++ b/resumo.tex
@@ -1,7 +1,7 @@
 \section{Resumo}
   Este relatório cobre todo o processo de planeamento, desenvolvimento e
   documentação de um sistema que resolva um problema abordado na UCE de
-  Engenharia de Linguagens na forma de Projecto Integrador, nomeadamente
+  Engenharia de Linguagens na forma de Projecto Integrado, nomeadamente
   a gestão de trabalhos práticos académicos desde a sua criação pelos docentes, à resolução pelos alunos
   e à publicação dos mesmos ao resto da comunidade \textit{online}.
 
